--- a/plugins/superdesk-user/gui-resources/templates/list.dust
+++ b/plugins/superdesk-user/gui-resources/templates/list.dust
@@ -1,6 +1,6 @@
 <!-- ... -->
 <style>
-	.table .btn-group{ visibility: hidden; display: inline; }
+	.table .btn-group{ visibility: hidden; display: inline; position: static }
 	.table tr:hover .btn-group{ visibility: visible; }
 	#area-main{ height: 100%; -moz-box-sizing: border-box; padding-top: 40px; }
 	.pagination .ipp:after{ content: "_('items per page')"; float: left; line-height: 35px; margin: 0 8px; }   
