--- a/plugins/superdesk-user/gui-resources/templates/item.dust
+++ b/plugins/superdesk-user/gui-resources/templates/item.dust
@@ -1,16 +1,16 @@
 {#User}
 	<td>
 		<a name="{href}" />
-		{Id}
+		{Id} {x|s}
 	</td>
 	<td>{FirstName}</td>
 	<td>{LastName}</td>
 	<td>{Name}</td>
 	<td>{EMail}</td>
 	<td>    
-		<div class="btn-group">
+		<span class="btn-group">
     		<button class="btn edit">_('Edit')</button>
     		<button class="btn btn-danger delete">_('Delete')</button>
-    	</div>
+    	</span>
     </td>
 {/User}
