--- a/plugins/livedesk/gui-resources/templates/providers/edit/link.dust
+++ b/plugins/livedesk/gui-resources/templates/providers/edit/link.dust
@@ -1,14 +1,14 @@
 	<div>{url}</div>
 	<div class="link-preview">
 		<figure class="link-thumbnail"> 
-			<img src="http://uidesign.lab.sourcefabric.org/liveblog/embed/wikitest.jpg">
+			<img src="{thumbnail}">
 		</figure>
 
-		<h3 class="linkpost-editable"><a href="{url}">{title}</a></h3>
+		<p><h3 class="linkpost-editable"><a href="{url}">{title}</a></h3></p>
 		<p class="result-text linkpost-editable">{description}</p>
 		<p class="attributes">
 			<i class="source-icon">
-				<img src="http://g.etfv.co/{url}" style="max-width: 16px" border="0">
+				<img src="{favicon}" style="max-width: 16px" border="0">
 			</i>
 			<a href="{url}" class="source-link" target="_blank">{title}</a>
 		</p>
