--- a/plugins/livedesk/gui-resources/templates/providers/edit/urlinput.dust
+++ b/plugins/livedesk/gui-resources/templates/providers/edit/urlinput.dust
@@ -1,1 +1,1 @@
-<input type="text" class="insert-link" placeholder="paste URL" style="width:98%">
+<input type="text" class="insert-link" placeholder="paste URL" style="width:100%; height: 23px;">
