--- a/plugins/livedesk/gui-resources/templates/providers/instagram.dust
+++ b/plugins/livedesk/gui-resources/templates/providers/instagram.dust
@@ -1,7 +1,7 @@
-<div class="search-header">
-    <input type="text" placeholder="_('Search Instagram')" id="instagram-search-text" style="display:block">
+<div class="search-header" style="height:35px;">
+    <input type="text" placeholder="_('Search Instagram')" id="instagram-search-text" style="display:block; width:100%;">
 </div>
 <div class="search-result-list scroller" id="instagram-image-holder" style="margin-top:-30px;">
-    <ul id="instagram-image-results"></ul>
-    <div id="instagram-image-more"></div>
+    <ul id="instagram-image-results" class="post-list"></ul>
+    <div id="instagram-image-more" style="display:block; float:left; width:100%;"></div>
 </div>
