--- a/plugins/livedesk/gui-resources/templates/providers/instagram.dust
+++ b/plugins/livedesk/gui-resources/templates/providers/instagram.dust
@@ -1,4 +1,4 @@
-<div class="search-header" style="height:35px;">
+<div class="search-header">
     <input type="text" placeholder="_('Search Instagram')" id="instagram-search-text" style="display:block; width:100%;">
 </div>
 <div class="search-result-list scroller" id="instagram-image-holder" style="margin-top:-30px;">
