--- a/plugins/livedesk/gui-resources/templates/timeline-item.dust
+++ b/plugins/livedesk/gui-resources/templates/timeline-item.dust
@@ -119,6 +119,7 @@
 	        	{?PublishedOn}<a href="#unpublish-post" data-toggle="modal" class="unpublish image">&nbsp;</a>{/PublishedOn}
 	        </div>
 	        <figure>
+	        {Avatar|s}
 	            {?AuthorPerson.Avatar}
 	                <img src="{AuthorPerson.Avatar}" />
 	            {:else}
